--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,26 +8,26 @@
         <i class="pi pi-folder-open"></i>
     </button>
 
-    <p-menu #menu [model]="items" [popup]="true" />
+    <p-menu #menu [model]="items" [popup]="true"/>
     <button (click)="menu.toggle($event)" class="p-link layout-menu-button layout-topbar-button" style="margin-right: 8px">
         <i class="pi pi-plus"></i>
     </button>
     <p-dialog header="New File" [modal]="true" dismissableMask="true" [(visible)]="newFileDialogVisible" [style]="{ width: '25rem' }">
         <div class="flex align-items-center gap-3 mb-3">
-            <input pInputText [(ngModel)]="newFileName"  class="flex-auto" autocomplete="off" />
+            <input pInputText [(ngModel)]="newFileName" class="flex-auto" autocomplete="off"/>
         </div>
         <div class="flex justify-content-end gap-2">
-            <p-button label="Cancel" severity="secondary" (onClick)="newFileDialogVisible = false" />
-            <p-button label="Save" (onClick)="createNewFile()" />
+            <p-button label="Cancel" severity="secondary" (onClick)="newFileDialogVisible = false"/>
+            <p-button label="Save" (onClick)="createNewFile()"/>
         </div>
     </p-dialog>
     <p-dialog header="New Folder" [modal]="true" dismissableMask="true" [(visible)]="newFolderDialogVisible" [style]="{ width: '25rem' }">
         <div class="flex align-items-center gap-3 mb-3">
-            <input pInputText [(ngModel)]="newFolderName" class="flex-auto" autocomplete="off" />
+            <input pInputText [(ngModel)]="newFolderName" class="flex-auto" autocomplete="off"/>
         </div>
         <div class="flex justify-content-end gap-2">
-            <p-button label="Cancel" severity="secondary" (onClick)="newFolderDialogVisible = false" />
-            <p-button label="Save" (onClick)="createNewFolder()" />
+            <p-button label="Cancel" severity="secondary" (onClick)="newFolderDialogVisible = false"/>
+            <p-button label="Save" (onClick)="createNewFolder()"/>
         </div>
     </p-dialog>
     <div #toolbar class="p-editor-toolbar " id="toolbar" style="border: none !important;margin: 0 auto 0 auto;">
@@ -106,7 +106,11 @@
          class="layout-topbar-menu">
 
         <button (click)="toggleAuthDialog()" class="p-link layout-topbar-button">
-            <img *ngIf="(user$ | async) as user; else defaultIcon" alt="logo" ngSrc="{{userProfile.imageUrl}}" style="height: 2.5rem; width: 2.5rem; border-radius: 50%; object-fit: cover;" fill="">
+            <p-avatar
+                *ngIf="(user$ | async) as user; else defaultIcon"
+                image="{{userProfile.imageUrl}}"
+                styleClass="mr-2"
+                shape="circle"/>
             <ng-template #defaultIcon>
                 <i class="pi pi-user"></i>
             </ng-template>
