add: introduction page in draft text & editor style

--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -13,11 +13,32 @@
     border-radius: 12px;
     padding: 5% 8% 25px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.02), 0 0 2px rgba(0, 0, 0, 0.05), 0 1px 4px rgba(0, 0, 0, 0.08);
+    line-height: 1.6;
+    p {
+        line-height: 1.6;
+        margin: 0 0 1rem;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        margin: 1.5rem 0 1rem 0;
+        font-family: inherit;
+        font-weight: 500;
+        line-height: 1.2;
+    };
+    ol{
+        margin: 0 0 1rem;
+        li {
+            line-height: 1.6;
+            margin: 0 0 1rem;
+        }
+    }
+
 }
 
 .p-editor-container .p-tabview-nav-content {
     border-radius: 12px;
 }
+
 .p-editor-container .p-tabview-nav {
     background: #f1f1f1;
 }
@@ -25,7 +46,8 @@
 .p-editor-container .p-tabview-nav-link {
     background: #f1f1f1;
 }
-.p-editor-container .p-tabview-panels  {
+
+.p-editor-container .p-tabview-panels {
     padding: 0;
 }
 
